# Diplom

./: CMakeLists.txt  README.md  config.ini
DataBase/: CMakeLists.txt  main.cpp
http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp  parser_config.cpp  parser_config.h
spider/: CMakeLists.txt  DB.cpp  DB.h  config.ini  http_utils.cpp  indexor.cpp  indexor.h  link.h  main.cpp
